xserver-xorg-video-nouveau (1:0.0.10~git+20080602+e034616-1) experimental; urgency=low

  * First upload to Debian experimental based on Christopher James Halse
    Rogers's packages for Ubuntu (Closes: #418889)
  * debian/control:
    - Set Maintainer to Debian X Strike Force, add Matthew Johnson and myself
      to Uploaders.
    - Bump Standards-Version to 3.7.3
    - Add Homepage: field
  * Update debian/xsfbs/xsfbs.{mk,sh}
  * Update debian/copyright.

 -- Chris Lamb <chris@chris-lamb.co.uk>  Mon, 26 May 2008 04:56:08 +0100

xserver-xorg-video-nouveau (1:0.0.10~git20080521-0~ppa1) hardy; urgency=low

  * "AUTOMATED: New git snapshot"
  * New git changelog:
  * c21594c... NV50: Be consistent with rules-ng.

 -- Christopher James Halse Rogers <raof@ubuntu.com>  Wed, 21 May 2008 17:58:14 +1000

xserver-xorg-video-nouveau (1:0.0.10~git20080519-0~ppa1) hardy; urgency=low

  * "AUTOMATED: New git snapshot"
  * New git changelog:

 -- Christopher James Halse Rogers <raof@ubuntu.com>  Mon, 19 May 2008 09:06:43 +1000

xserver-xorg-video-nouveau (1:0.0.10~git20080516-0~ppa1) hardy; urgency=low

  * "AUTOMATED: New git snapshot"
  * New git changelog:

 -- Christopher James Halse Rogers <raof@ubuntu.com>  Fri, 16 May 2008 12:08:43 +1000

xserver-xorg-video-nouveau (1:0.0.10~git20080511-0~ppa1) hardy; urgency=low

  * "AUTOMATED: New git snapshot"
  * New git changelog:
  * 9c1d87f... NV50: Some misc things.

 -- Christopher James Halse Rogers <raof@ubuntu.com>  Sun, 11 May 2008 16:53:10 +1000

xserver-xorg-video-nouveau (1:0.0.10~git20080509-0~ppa1) hardy; urgency=low

  * "AUTOMATED: New git snapshot"
  * New git changelog:
  * 5f08db9... Cosmetic g80 laptop dcb parsing enhancement
  * 6a460ea... randr12: some reordering, tidying &c
  * 7455bc8... Enable RandR 1.2 code-path by default
  * 98a751e... Don't call call_lvds_script with a null dcbent pointer
  * 77b24bc... randr12: tidy up some nv50 remnants in the pre nv50 code
